# maketrack

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.example.yml  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml  release.yml
src/maketrack/: __init__.py  config.py  db.py  errors.py  logging.py  main.py  migrations.py  templating.py
src/maketrack/alembic/: env.py
src/maketrack/mcp/: __init__.py  __main__.py  serializers.py  server.py
src/maketrack/models/: __init__.py  external_source.py  filament.py  inventory.py  location.py  model.py  printer.py  project.py
src/maketrack/routes/: assets.py  external_sources.py  filaments.py  inventory.py  locations.py  media.py  models.py  printer_builds.py  printers.py  projects.py  shopping.py
src/maketrack/schemas/: external_source.py  filament.py  inventory.py  location.py  model.py  printer.py  project.py
src/maketrack/services/: _pagination.py  assets.py  bom.py  external_sources.py  filaments.py  inventory.py  locations.py  models.py  printers.py  (+6 more)
tests/: conftest.py  factories.py  test_alembic_upgrade.py  test_assets.py  test_bom.py  test_filaments_routes.py  test_filaments_service.py  test_hardware_presets.py  test_healthz.py  test_inventory.py  test_inventory_extras.py  test_locations.py  test_mcp.py  test_models.py  test_models_views.py  test_pagination.py  test_printer_builds.py  test_printers.py  test_project_followup.py  test_projects.py  test_search.py  test_settings_theme.py  test_sources_routes.py  test_spoolman_adapter.py  test_sync_engine.py  test_ui_smoke.py
(+56 files in other folders)
